--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "react-native-pinchable",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "Pinch to zoom for React Native",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "format": "prettier --write *.{md,js,json}"
   },
